--- a/.pylintrc
+++ b/.pylintrc
@@ -21,7 +21,7 @@ bad-functions=eval,exec,__import__
 module-rgx=[a-z_][a-z0-9_]{2,30}$
 
 # Constant name regex
-const-rgx=[a-z_][a-zA-Z0-9_]{2,30}$
+const-rgx=[a-zA-Z_][a-zA-Z0-9_]{2,30}$
 
 # Class name regex
 class-rgx=[A-Z_][a-zA-Z0-9]+$
