Updated url and description information.

--- a/addons/source-python/plugins/victim_stats/info.ini
+++ b/addons/source-python/plugins/victim_stats/info.ini
@@ -1,4 +1,5 @@
 verbose_name = "Victim Stats"
 author = "satoon101"
-version = "1.0"
-url = ""
+description = "Sends victim stat information on death and round end."
+version = "1.0.0"
+url = "https://forums.sourcepython.com/viewtopic.php?t=1860"
